--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -8,6 +8,6 @@ services:
       - ./:/usr/src/app
     environment:
       - WATCHPACK_POLLING=true
-    command: sh -c "cd next-app && npm run dev"
+    command: sh -c "npm run dev"
     ports:
       - "3000:3000"
