--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.4.3",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -23,6 +25,7 @@
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
