compose.dev.ymlで作成されるContainer Name変更・それに関わる修正

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,10 +1,11 @@
 DOCKER=docker compose
 
 run:
+	$(DOCKER) down --remove-orphans
 	$(DOCKER) up --build -d
 down:
-	$(DOCKER) down
+	$(DOCKER) down --remove-orphans
 
 dev-run:
-	$(DOCKER) down
-	$(DOCKER) -f ./compose.dev.yml up --build -d
+	$(DOCKER) down --remove-orphans
+	$(DOCKER) -f ./compose.dev.yml up -d
