--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@testing-library/user-event": "^14.4.3",
+    "axios": "^0.27.2",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
