--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -9,16 +9,20 @@ services:
     ports:
       - "8000:8080"
     tty: true
+    env_file:
+      - .env
     environment:
       TZ: Asia/Tokyo
 
-  # db:
-  #   container_name: db
-  #   image: mysql:8.0.15
-  #   volumes:
-  #     - ./mysql:/var/lib/mysql
-  #   env_file:
-  #     - .env
-  #   command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
-  #   cap_add:
-  #     - SYS_NICE
+  db:
+    container_name: db
+    image: mysql:8.0.15
+    volumes:
+      - ./mysql:/var/lib/mysql
+    env_file:
+      - .env
+    ports:
+      - 3306:3306
+    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
+    cap_add:
+      - SYS_NICE
