backend small changes (#36)
* ./backend/readme.md微修正

* gofmt修正

デバッグ時に消し忘れていたls削除
gofmtを使用するようにする（したい）

--- a/.github/workflows/gofmt.yml
+++ b/.github/workflows/gofmt.yml
@@ -1,4 +1,4 @@
-name: learn-github-actions
+name: golang formatting and lint check
 on:
   pull_request:
 
@@ -11,8 +11,10 @@ jobs:
       with:
         go-version: 1.18
       id: go
-    - run: ls
     - uses: actions/checkout@v3
+    - name: go format
+      run: if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then exit 1; fi
+      working-directory: ./backend
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v3.2.0
       with:
