--- a/backend/compose.dev.yml
+++ b/backend/compose.dev.yml
@@ -11,20 +11,20 @@ services:
     volumes:
       - .:/go/src
     tty: true
-    env_file:
-      - .env
+    # env_file:
+    #   - .env
     environment:
       TZ: Asia/Tokyo
 
-  db:
-    container_name: db
-    image: mysql:8.0.15
-    tmpfs:
-      - /var/lib/mysql
-    env_file:
-      - .env
-    ports:
-      - 3306:3306
-    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
-    cap_add:
-      - SYS_NICE
+  # db:
+  #   container_name: db
+  #   image: mysql:8.0.15
+  #   tmpfs:
+  #     - /var/lib/mysql
+  #   env_file:
+  #     - .env
+  #   ports:
+  #     - 3306:3306
+  #   command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
+  #   cap_add:
+  #     - SYS_NICE
