--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "next": "12.3.0",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/node": "18.7.16",
     "@types/react": "18.0.19",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.9",
     "eslint": "8.23.1",
