--- a/frontend/Dockerfile-deployment
+++ b/frontend/Dockerfile-deployment
@@ -5,6 +5,6 @@ WORKDIR /usr/app
 COPY package.json .
 RUN npm install
 
-RUN mkdir node_modules/.cache && chmod -R 777 node_modules/.cache
-
 COPY . .
+
+RUN npm run build
