--- a/compose.yml
+++ b/compose.yml
@@ -1,21 +1,32 @@
 version: "3"
 services:
   frontend:
+    container_name: "frontend"
     build:
       context: ./frontend
       dockerfile: Dockerfile-deployment
     environment:
       - WATCHPACK_POLLING=true
     command: sh -c "npm run start"
-    ports:
-      - "80:3000"
   backend:
-    container_name: app
+    container_name: backend
     build:
       context: ./backend
       dockerfile: ./docker/app/Dockerfile
-    ports:
-      - "8000:8080"
     tty: true
     environment:
       TZ: Asia/Tokyo
+  nginx:
+    container_name: nginx
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    ports:
+      - "443:443"
+      - "80:80"
+    tty: true
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/k:/etc/nginx/k
+    depends_on:
+      - "backend"
