https接続した際にhttps接続にリダイレクトするようにした (#148)

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,33 +9,12 @@ http {
         default upgrade;
         ''      close;
     }
-    # server {
-    #     listen       80;
-    #     server_name localhost;
-    #     location / {
-    #         proxy_pass http://frontend:3000;
-    #     }
-    #     location /ws {
-    #     proxy_pass http://backend:8080;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection "upgrade";
-    #     }
-    # }
-    # server {
-    #     listen 80;
-    #     server_name api.localhost;
-    #     location / {
-    #         proxy_pass http://backend:8080;
-    #     }
-    #     location /ws {
-    #     proxy_pass http://backend:8080;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection "upgrade";
-    #     }
-    # }
-    
+    server {
+        listen 80;
+        server_name p-delaer;
+        return 301 https://p-dealer.com;
+    }
+
     server {
         listen 443;
         ssl on;
